--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>worked</title>
+    <title>welcome page</title>
   </head>
   <body>
   <style>
@@ -9,9 +9,8 @@
     }
   </style>
     <div class="a">
-        <h1>Thank You</h1>
-        <img id="gif" src="folks.gif"/>
-        <h1> Espero que esse nao seja o fim de nossa historia juntos haha </h1>
+        <h1>Hello Atlantico</h1>
+        <img src="terry.png" title="hello"/>
     </div>
   </body>
 </html>
